--- a/css/style.css
+++ b/css/style.css
@@ -34,15 +34,61 @@
   padding: 100px;
 }
 #features-text{
-    float: right;
-    margin-right: 200px;
-    padding-top: 30px;
+    /* float: right; */
+    /* margin-right: 400px;
+    padding-top: 30px; */
+    text-align: left;
+    margin-left: 400px;
+}
+#features-text h2{
+    font-size: 30px;
+}
+#features-text p{
+
 }
 
 
-#imagess, img{
+/* #imagess, img{
     height: 100px;
     width: 100px;
     margin-left: 100px;
     
+} */
+#div-video{
+    
+}
+#video{
+    display: block;
+    width: 500px;
+    height: 400px;
+    margin: 30px 300px;
+}
+#column{
+    border: solid black 1px;
+    margin-left:  300px; 
+    width: 350px;
+    height: 350px;
+}
+#column h3{
+    background-color: grey;
+    padding: 15px 80px;
+}
+#dollar{
+    text-align: center;
+    font-size: 30px;
+    font-style: bold;
+    padding: 15px 0;
+}
+#column p{
+    font-size: 20px;
+    text-align: center;
+    padding: 15px 0;
+}
+#column button{
+    width: 150px;
+    height: 50px;
+  
+    display: block;
+    margin: auto;
+  
 }
